# cwas4fmri

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AN_enigma_resting-sate_cwas.ipynb  Dockerfile  LICENSE  README.md  main.py  params.py  pyproject.toml  run_cwas.py  run_cwas.sh  test_cwas.ipynb  tox.ini  workflow.py
.github/workflows/: test.yml
cwas4fmri/: logger.py  run.py  run_cwas.sh  workflow.py  worklfow.py
cwas4fmri/tests/: test_cli.py
cwas4fmri/utils/: stats.py  tools.py
src/cwas4fmri/: __init__.py  connectome.py  files.py  phenotype.py  plots.py  reject_fd_qc.py  run.py  stats.py  subject.py  workflow.py
src/cwas4fmri/tests/: test_cli.py
utils/: connectome.py  features.py  files.py  phenotype.py  reject_fd_qc.py  stats.py  subject.py  tools.py  verifications.py
