[project]
name = "cwas4fmri"
description = "Connectome Wide Association Study for fMRI connectomes"
readme = "README.md"
license = { file="LICENSE" }
authors = [
    { name = "claraElk", email = "clara.elkhantour@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy<2",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
    "scipy<=1.15.3"
]
version = "0.0.1"

[project.scripts]
cwas4fmri = "cwas4fmri.run:main"

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "pre-commit",
  "cwas4fmri[test]",
  "tox",
  "types-setuptools",
  "types-tqdm"
]
test = [
  "pytest",
  "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["src/cwas4fmri/tests/"]

[tool.black]
target-version = ['py38']
line-length = 79
